# syrinx

./: .gitignore  LICENSE.md  README.md  pyproject.toml  simple_syrinx.py  simplified_syrinx.ipynb  simplified_syrinx_jax.ipynb
